[tool.poetry]
name = "Yubot"
version = "0.1.0"
description = ""
authors = ["YUASDS <1787569211@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
Pillow = "^9.0.0"
jieba = "^0.42.1"
PyYAML = "^6.0"
httpx = "^0.21.3"
peewee = "^3.14.8"
prettytable = "^3.0.0"
pyzbar = "^0.1.8"
numpy = "^1.22.1"
beautifulsoup4 = "^4.10.0"
opencv-contrib-python = "^4.5.5"
graia-ariadne = {extras = ["full"], version = "^0.5.3"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
