[tool.poetry]
name = "Yubot"
version = "0.1.0"
description = ""
authors = ["YUASDS <1787569211@qq.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
Pillow = "^9.0.0"
jieba = "^0.42.1"
PyYAML = "^6.0"
httpx = "^0.21.3"
peewee = "^3.14.8"
prettytable = "^3.0.0"
pyzbar = "^0.1.8"
numpy = "^1.22.1"
graia-ariadne = {extras = ["full"], version = "^0.5.3"}
playwright = "^1.19.0"
wordcloud = "^1.8.1"
graiax-silkcoder = {extras = ["ffmpeg"], version = "^0.1.6"}
scipy = "^1.8.0"
flake8 = "^4.0.1"
black = "^22.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]] 
name = "custom" 
url = "https://pypi.tuna.tsinghua.edu.cn/simple" 
default = true